adding the style on the Navbar and Header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,3 +13,85 @@
     height: 50%;
     background: linear-gradient(to top,transparent 10%,var(--color-primary)100%);
 }
+
+
+.highlight {
+  background: linear-gradient(700deg, #3700fc, #0613cc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+}
+
+
+
+#header .container *{
+    text-align: left;
+}
+
+#header .container{
+    padding-top: 30px;
+}
+
+#header .container >.row{
+    display: flex;
+    gap: 40px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+
+#header .container .row .column:first-child{
+    float: 1;
+}
+
+
+
+#header .container .buttons__container{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-top: 30px;
+}
+
+
+#header .image__container{
+    width: 100%;
+    max-width: 450px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: var(--radius-2);
+    transition: var(--transition)
+}
+
+
+
+#header .image__container:hover{
+    transform: scale(1.1);
+
+
+}
+
+
+
+
+@media(max-width:900px){
+    #header .container *{
+        text-align: center;
+    }
+
+    #header .container > .row{
+        flex-direction: column;
+    }
+
+    #header .container .buttons__container{
+        justify-content: center;
+    }
+
+
+
+
+
+
+
+}
