--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -98,7 +98,7 @@
         top: 0;
         left: -100%;
         min-height: 100vh;
-        max-width: 350vh;
+        max-width: 350px;
         display: block;
         background: var(--color-ui-secondary);
         transition: var(--transition);
