done with Achi page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,10 +17,13 @@
 
 .highlight {
   background: linear-gradient(700deg, #3700fc, #0613cc);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text; /* Needed for Chrome/Safari */
+  -webkit-text-fill-color: transparent; /* Needed to show gradient as text color */
+  display: inline-block; /* Required */
   font-weight: 600;
 }
+
 
 
 
@@ -75,7 +78,11 @@
 
 
 
-@media(max-width:900px){
+
+
+
+
+@media(max-width:1024px){
     #header .container *{
         text-align: center;
     }
@@ -91,6 +98,24 @@
 
 
 
+
+
+
+}
+
+
+@media(max-width:500px){
+    .highlight {
+  text-decoration: none;
+}
+
+
+.description {
+ white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis; /* Optional: Adds "..." if the line is too long */
+
+}
 
 
 
