--- a/src/components/Achievement/Achievement.css
+++ b/src/components/Achievement/Achievement.css
@@ -18,7 +18,7 @@
     display: flex;
     align-items: center;
     gap:10px;
-    transition: var(--transition)
+    /* transition: var(--transition) */
 }
 
 
